adicionando referência para o arquivo README

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 Testes para javascript utilizando QUnit
 
 Link para a biblioteca: http://docs.jquery.com/QUnit#Using_QUnit
+
+referência: http://net.tutsplus.com/tutorials/javascript-ajax/how-to-test-your-javascript-code-with-qunit/
